after lunch commit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- meta description should be around 150-160 characters long -->
+    <!-- meta description should be around 150-160 characters long awaiting imput from customer-->
     <meta name="description" content="Kvalitet, service, oplevelse og professionalisme er fundamentet hos Henriksen Coiffure. En unik frisørsalon i hjertet af Aalborg."/>
     <title>Henriksen Coiffure - En Unik Frisørsalon i hjertet af Aalborg</title>
     <link rel="stylesheet" href="./css/style.css">
